# ProShottr

./: CMakeLists.txt  README.md
qml/: AnnotationCanvas.qml  Main.qml  Overlay.qml  PreferencesWindow.qml  Toolbar.qml
resources/: proshottr.qrc
src/: CMakeLists.txt
src/app/: AppBootstrap.cpp  AppBootstrap.hpp  AppCoordinator.cpp  AppCoordinator.hpp  main.cpp
src/core/: CaptureOrchestrator.cpp  CaptureOrchestrator.hpp  ClipboardExportService.cpp  ClipboardExportService.hpp  DepthStyler.cpp  DepthStyler.hpp  GlobalHotkeyService.hpp  PlatformCaptureAdapter.hpp  SettingsStore.cpp  SettingsStore.hpp
src/platform/common/: PermissionHelper.hpp
src/platform/windows/: WindowsCaptureAdapter.cpp  WindowsCaptureAdapter.hpp  WindowsHotkeyService.cpp  WindowsHotkeyService.hpp  WindowsPermissionHelper.cpp  WindowsPermissionHelper.hpp
src/ui/: AnnotationCommand.hpp  AnnotationHistory.cpp  AnnotationHistory.hpp  OverlayManager.cpp  OverlayManager.hpp
